--- a/style.css
+++ b/style.css
@@ -23,3 +23,31 @@ body {
 #app {
   padding: 0 80px;
 }
+
+/* LISTA PRODUTOS */
+.produtos {
+  max-width: 900px;
+  margin: 100px auto 0;
+}
+
+.produto {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+  background: #fff;
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.1);
+}
+
+.produto_img {
+  max-width: 300px;
+  margin-right: 40px;
+}
+
+.produto_titulo {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.produto_preco {
+  color: rgba(0, 0, 0, 0.5)
+}
