--- a/style.css
+++ b/style.css
@@ -39,9 +39,9 @@ body {
 }
 
 .carrinho_menu::after {
-  content: "";
+  content: '';
   display: inline-block;
-  background: url("./assets/carrinho.svg") no-repeat center center;
+  background: url('./assets/carrinho.svg') no-repeat center center;
   width: 25px;
   height: 25px;
   margin-left: 10px;
@@ -112,17 +112,17 @@ body {
   align-items: end;
   gap: 50px;
   padding: 0 50px 50px 0;
-  animation: fadeIn .3s forwards;
+  animation: fadeIn 0.3s forwards;
 }
 
 @keyframes fadeIn {
   from {
     opacity: 0;
-    transform: translate3D(50px, 0, 0);
+    transform: translate3d(50px, 0, 0);
   }
   to {
     opacity: 1;
-    transform: translate3D(0px, 0, 0);
+    transform: translate3d(0px, 0, 0);
   }
 }
 
@@ -141,7 +141,6 @@ body {
 
 .modal_img {
   grid-column: 1;
-  margin-top: 50px;
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -201,4 +200,39 @@ body {
 
 .avaliacao_usuario {
   font-weight: bold;
+}
+
+/* ALERTA */
+.alerta {
+  position: absolute;
+  top: 20px;
+  left: 0px;
+  z-index: 10;
+  width: 100%;
+  text-align: center;
+  display: none;
+}
+
+.alerta.ativo {
+  display: block;
+  animation: fadeInDown .3s forwards;
+}
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -30px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0px, 0);
+  }
+}
+
+.alerta_mensagem {
+  background: #fff;
+  display: inline-block;
+  padding: 20px 40px;
+  border: 2px solid black;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
